<resources>
    <string name="app_name">UGC TRANS</string>
    <string name="ugc">Supply Chain Solution Pvt. Ltd.</string>
    <string name="ugc1">UGC Supply Chain Solution Pvt. Ltd.</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="description">ugcLogo</string>
    <string name="password">Password</string>
    <string name="select_customer_name">Select Customer Name</string>
    <string name="vno">VEHICLE NO</string>
    <string name="intime">IN DATETIME</string>
    <string name="yymm">YYYYMM</string>
    <string name="VEHICLE_TYPE">VEHICLE TYPE</string>
    <string name="news">New Transport Entry</string>
    <string name="IN">IN / Entry</string>
    <string name="outt">Out / Exit</string>
    <string name="Evno">Enter Vehical no</string>
    <string name="verifys">Verify Vehical No.</string>
    <string name="submit">Submit</string>
    <string name="custn">CUSTOMER</string>
    <string name="owner">OWNER</string>
    <string name="addre">ADDRESS</string>
    <string name="contact">CONTACT NO</string>
    <string name="panno">PAN NO</string>
    <string name="INSNUMBER">INSURANCE NUMBER</string>
    <string name="insexdate">INS EXPIRY DATE</string>
    <string name="ratono">RTO NUMBER</string>
    <string name="rtoexdate">RTO NO EX PDATE</string>
    <string name="pollution">POLLUTION N0</string>
    <string name="poexdate">POLLUTION EXP DATE</string>
    <string name="transpassno">TRANSIT PASS NO</string>
    <string name="tranpassex">TRANSIT EXP DATE</string>
    <string name="next">NEXT</string>
    <string name="invno">INVOICE NO</string>
    <string name="supname">SUPPLIER NAME</string>
    <string name="TransId">TRANSACTION ID</string>
    <string name="capacity">CAPACITY</string>
    <string name="drconta">DRIVER CONTACT NO</string>
    <string name="DNAME">DRIVER NAME</string>
    <string name="TranId">TRANS NO/ID</string>
    <string name="choose">Choose Any One Option</string>
    <string name="manually">Enter Vehical No</string>
    <string name="scaanQr">Scan QR Code</string>
    <string name="sanImage">Scan vehicle No</string>
    <string name="capture">Captuer Image</string>
    <string name="getsText">Show Text</string>
    <string name="vcalD">Vehical Details</string>
    <string name="ind">Invoice Details</string>
    <string name="repotrt">Report</string>
    <string name="trans_report">Vehicle Report</string>
    <string name="choose_date">Enter Date</string>
    <string name="show_report">Show Report</string>
    <string name="CHECK">Show Report</string>
    <string name="from_date">From Date</string>
    <string name="To_date">To Date</string>
    <string name="select_loding_unloding">Select Loading/Unloading</string>
    <string name="dock"> DOCK  \n In / Out </string>
</resources>
