<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".session.Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="16dp">

        <ImageView
            android:layout_width="175dp"
            android:layout_height="75dp"
            android:src="@drawable/ic_ucglogo"
            android:contentDescription="@string/description" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ugc1"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/txtUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/username"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"/>

        </android.support.design.widget.TextInputLayout>
        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/cust_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_customer_name"
            android:textColorHint="#000000"
            android:textColorHighlight="#000"
            android:textSize="14sp"
            app:met_floatingLabel="highlight"
            android:layout_marginBottom="16dp"/>
        <Button
            android:id="@+id/btnlogin"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="14sp"
            android:background="@drawable/rounded_button"
            android:textColor="#000000"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>