<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".vehicle_in_out.Tran_Veh_In">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#FFFFFF"
            android:layout_margin="@dimen/fab_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="16dp">
                    <EditText
                        android:id="@+id/v_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/vno"
                        android:focusable="false"
                        android:textAllCaps="true"
                        android:textSize="14sp"/>

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">
                    <EditText
                        android:id="@+id/in_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/intime"
                        android:inputType="datetime"
                        android:focusable="false"
                        android:textAllCaps="true"
                        android:textSize="14sp"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/loading_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_loding_unloding"
                android:textColorHint="#000000"
                android:textColorHighlight="#000"
                android:textSize="14sp"
                app:met_floatingLabel="highlight"
                android:layout_marginBottom="16dp"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/supplyname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/supname"
                    android:textAllCaps="true"
                    android:textSize="14sp"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="16dp">

                    <EditText
                        android:id="@+id/invno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:hint="@string/invno"
                        android:textAllCaps="true"
                        android:textSize="14sp"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/yymm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <EditText
                        android:id="@+id/yyymm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:hint="@string/yymm"
                        android:textAllCaps="true"
                        android:textSize="14sp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="16dp">

                    <EditText
                        android:id="@+id/drame"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/DNAME"
                        android:textAllCaps="true"
                        android:textSize="14sp"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <EditText
                        android:id="@+id/drcontact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/drconta"
                        android:textAllCaps="true"
                        android:textSize="14sp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="16dp"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/tid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapCharacters"
                        android:hint="@string/TransId"
                        android:textAllCaps="true"
                        android:textSize="14sp"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:visibility="gone">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/insexdate"
                        android:textAllCaps="true"
                        android:textSize="14sp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:text="@string/submit"
                android:background="@drawable/rounded_button"
                android:textSize="14sp"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>