<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="@color/colorAccent">
        <TextView
            android:textColor="#FFF"
            android:textSize="20sp"
            android:text="@string/verifys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp">
        <android.support.design.widget.TextInputLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <EditText
                android:id="@+id/tranid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:textAllCaps="true"
                android:hint="@string/TranId"
                android:textSize="14sp"
                android:gravity="center|start"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_gravity="center_horizontal">

            <EditText
                android:id="@+id/veh_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:hint="@string/Evno"
                android:gravity="center|start"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center">
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonConfirm1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/rounded_button"
            android:padding="3dp"
            android:textSize="14sp"
            android:text="@string/submit"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#000000" />
    </LinearLayout>
</LinearLayout>